--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
   font-family: 'Lato', sans-serif;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
+  overflow-x: auto;
   
 }
 .hero-container{
