--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
   font-family: 'Lato', sans-serif;
   padding: 0;
   margin: 0;
-  
+  overflow-y: scroll;
   
 }
 .hero-container{
@@ -11,7 +11,7 @@ body{
 }
 .hero-bg-color{
   background: linear-gradient(130deg, #231a6f, #0f054c);
-  overflow: hidden;
+  
   height: 50%;
   
 }
