--- a/style.css
+++ b/style.css
@@ -3,15 +3,14 @@ body{
   font-family: 'Lato', sans-serif;
   padding: 0;
   margin: 0;
-  overflow-y: scroll;
-  
+  overflow-x: hidden;
 }
 .hero-container{
   display: flex;
 }
 .hero-bg-color{
   background: linear-gradient(130deg, #231a6f, #0f054c);
-  
+  overflow: hidden;
   height: 50%;
   
 }
